split GeneratedKeyAssignmentToken to LiteralGeneratedKeyAssignmentToken and ParameterMarkerGeneratedKeyAssignmentToken